[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Art/leftSword.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/rightSword.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SwordCrossing.gd" type="Script" id=3]

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.205298, 0.907285 )
colors = PoolColorArray( 0.854004, 0.528814, 0.130102, 1, 0.972656, 0.911925, 0.265961, 1, 1, 1, 1, 1 )

[node name="SwordCrossing" type="Node2D"]
scale = Vector2( 0.148217, 0.148217 )
script = ExtResource( 3 )

[node name="rightSword" type="Sprite" parent="."]
modulate = Color( 0.380392, 0.85098, 0.231373, 1 )
position = Vector2( 3000, 0 )
rotation = 1.0472
scale = Vector2( 1.6861, 1.6861 )
texture = ExtResource( 2 )

[node name="leftSword" type="Sprite" parent="."]
modulate = Color( 0.705882, 0.196078, 0.196078, 1 )
position = Vector2( -3000, 0 )
rotation = -1.0472
scale = Vector2( 1.59424, 1.59424 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
scale = Vector2( 39.6895, 102.597 )
emitting = false
amount = 15
lifetime = 1.5
speed_scale = 0.82
explosiveness = 0.96
direction = Vector2( 0, -1 )
initial_velocity = 72.78
initial_velocity_random = 0.33
angular_velocity = 360.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 2 )
color_ramp = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.95
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
